BuildTools: Fix SDK versions (21H1 uses 20H1 name with newer version)

--- a/tools/CustomBuildTool/CustomBuildTool.csproj
+++ b/tools/CustomBuildTool/CustomBuildTool.csproj
@@ -41,14 +41,14 @@
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
         <DefineConstants />
-        <DebugType>portable</DebugType>
-        <DebugSymbols>false</DebugSymbols>
+        <DebugType>embedded</DebugType>
+        <DebugSymbols>true</DebugSymbols>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
         <DefineConstants />
-        <DebugType>portable</DebugType>
-        <DebugSymbols>false</DebugSymbols>
+        <DebugType>embedded</DebugType>
+        <DebugSymbols>true</DebugSymbols>
     </PropertyGroup>
 
     <ItemGroup>
