Add parent console to process properties

--- a/ProcessHacker/ProcessHacker.rc
+++ b/ProcessHacker/ProcessHacker.rc
@@ -97,11 +97,11 @@ BEGIN
     EDITTEXT        IDC_CURDIR,79,138,168,12,ES_AUTOHSCROLL | ES_READONLY
     LTEXT           "Started:",IDC_STATIC,13,156,28,8
     EDITTEXT        IDC_STARTED,79,154,168,12,ES_AUTOHSCROLL | ES_READONLY
-    LTEXT           "PEB address:",IDC_STATIC,13,172,44,8
-    EDITTEXT        IDC_PEBADDRESS,79,170,101,12,ES_AUTOHSCROLL | ES_READONLY
+    LTEXT           "Parent console:",IDC_STATIC,13,172,52,8
+    EDITTEXT        IDC_PARENTCONSOLE,79,170,101,12,ES_AUTOHSCROLL | ES_READONLY
     LTEXT           "Image type:",IDC_PROCESSTYPELABEL,185,172,41,8,NOT WS_VISIBLE
     LTEXT           "32-bit",IDC_PROCESSTYPETEXT,228,172,20,8,NOT WS_VISIBLE
-    LTEXT           "Parent:",IDC_STATIC,13,188,25,8
+    LTEXT           "Parent process:",IDC_STATIC,13,188,52,8
     EDITTEXT        IDC_PARENTPROCESS,79,186,147,12,ES_AUTOHSCROLL | ES_READONLY
     PUSHBUTTON      "View",IDC_VIEWPARENTPROCESS,230,185,17,15,BS_ICON
     LTEXT           "Mitigation policies:",IDC_STATIC,13,204,59,8
