--- a/plugins/Plugins.props
+++ b/plugins/Plugins.props
@@ -27,6 +27,7 @@
             <MultiProcessorCompilation>true</MultiProcessorCompilation>
             <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
             <LanguageStandard>stdcpplatest</LanguageStandard>
+            <LanguageStandard_C>stdc17</LanguageStandard_C>
             <StringPooling>true</StringPooling>
         </ClCompile>
         <Link>
