--- a/.gitignore
+++ b/.gitignore
@@ -98,8 +98,10 @@ plugins/OnlineChecks/virustotal.h
 tools/CustomBuildTool/bin/Debug*/
 tools/CustomBuildTool/bin/Release*/*
 !tools/CustomBuildTool/bin/Release/CustomBuildTool.exe
-!tools/CustomBuildTool/bin/Release/CustomBuildTool.exe.config
-!tools/CustomBuildTool/bin/Release/CustomBuildTool.pdb
+!tools/CustomBuildTool/bin/Release/clrcompression.dll
+!tools/CustomBuildTool/bin/Release/clrjit.dll
+!tools/CustomBuildTool/bin/Release/coreclr.dll
+!tools/CustomBuildTool/bin/Release/mscordaccore.dll
 
 !tools/CustomSignTool/bin/
 tools/CustomSignTool/bin/Debug*/
